--- a/src/EventManager/Views/Account/RegisterUser.cshtml
+++ b/src/EventManager/Views/Account/RegisterUser.cshtml
@@ -1,11 +1,11 @@
-﻿@model RegisterViewModel
+﻿@model RegisterUserViewModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Register User";
 }
 
 <h2>@ViewData["Title"].</h2>
 
-<form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+<form asp-controller="Account" asp-action="RegisterUser" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
     <h4>Create a new account.</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
