--- a/src/EventManager/Views/Events/Index.cshtml
+++ b/src/EventManager/Views/Events/Index.cshtml
@@ -1,5 +1,43 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model IEnumerable<EventManager.Models.Event>
+
+@{ 
+    ViewBag.Title = "Events";
 }
+
+<h2>Events</h2>
+<hr />
+
+<form asp-controller="Albums" asp-action="Index">
+    <p>
+        Search: <input class="form-control valid" type="text" name="searchString">
+        <input class="btn btn-default" type="submit" value="Search" />
+    </p>
+</form>
+
+<table class="table">
+    <tr>
+        <th>@Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSort })</th>
+        <th>@Html.ActionLink("Artist Name", "Index", new { sortOrder = ViewBag.ArtistSort })</th>
+        <th>@Html.ActionLink("Genre", "Index", new { sortOrder = ViewBag.GenreSort })</th>
+        <th>@Html.ActionLink("Date/Time", "Index", new { sortOrder = ViewBag.DateTimeSort })</th>
+        <th>@Html.ActionLink("Location", "Index", new { sortOrder = ViewBag.LocationSort })</th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@Html.DisplayFor(modelItem => item.Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Artist)</td>
+            <td>@Html.DisplayFor(modelItem => item.Genre)</td>
+            <td>@Html.DisplayFor(modelItem => item.Date)</td>
+            <td>@Html.DisplayFor(modelItem => item.Location)</td>
+            @*<td>
+                <a asp-action="Likes" asp-route-id="@item.AlbumID" class="btn btn-warning">Like</a>
+                <a asp-controller="Playlists" asp-action="AddToPlaylist" asp-route-id="@item.AlbumID" class="btn btn-default">Playlist +</a>
+                <a asp-action="Edit" asp-route-id="@item.AlbumID" class="btn btn-default">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.AlbumID" class="btn btn-default">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.AlbumID" class="btn btn-danger">Delete</a>
+            </td>*@
+        </tr>
+    }
+</table>
