--- a/src/EventManager/Views/Events/Index.cshtml
+++ b/src/EventManager/Views/Events/Index.cshtml
@@ -6,7 +6,10 @@
 
 <h2>Events</h2>
 <hr />
-
+<!-- For all users-->
+<p>
+    <a asp-controller="Home" asp-action="Index" class="btn btn-default">Return to Homepage</a>
+</p>
 <form asp-controller="Events" asp-action="Index">
     <p>
         Search: <input class="form-control valid" type="text" name="searchString">
@@ -22,6 +25,7 @@
         <th>@Html.ActionLink("Date", "Index", new { sortOrder = ViewBag.DateSort })</th>
         <th>@Html.ActionLink("Time", "Index", new { sortOrder = ViewBag.TimeSort })</th>
         <th>@Html.ActionLink("Location", "Index", new { sortOrder = ViewBag.LocationSort })</th>
+        <th></th>
     </tr>
 
     @foreach (var item in Model)
@@ -30,16 +34,23 @@
             <td>@Html.DisplayFor(modelItem => item.Name)</td>
             <td>@Html.DisplayFor(modelItem => item.Artist)</td>
             <td>@Html.DisplayFor(modelItem => item.Genre)</td>
-            <td>@Html.DisplayFor(modelItem => item.Date)</td>
-            <td>@Html.DisplayFor(modelItem => item.Time)</td>
+            <td>@item.Date.ToString("MMMM d, yyyy")</td>
+            <td>@item.Time.ToString("h:mm tt")</td>
             <td>@Html.DisplayFor(modelItem => item.Location)</td>
-            @*<td>
-                <a asp-action="Likes" asp-route-id="@item.AlbumID" class="btn btn-warning">Like</a>
-                <a asp-controller="Playlists" asp-action="AddToPlaylist" asp-route-id="@item.AlbumID" class="btn btn-default">Playlist +</a>
-                <a asp-action="Edit" asp-route-id="@item.AlbumID" class="btn btn-default">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.AlbumID" class="btn btn-default">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.AlbumID" class="btn btn-danger">Delete</a>
-            </td>*@
+            @if (item.IsActive == false)
+            {
+                <td style="color:red">Canceled</td>
+            }
+            else
+            {
+                <td></td>
+
+            }
+            <td>
+                @if(item.IsActive == true){ 
+                <a asp-action="Attend" asp-route-id="@item.EventID" class="btn btn-info">Attend</a>
+                }else{}
+            </td>
         </tr>
     }
 </table>
