--- a/src/EventManager/Views/Home/Index.cshtml
+++ b/src/EventManager/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@ else if (SignInManager.IsSignedIn(User) && ViewBag.ArtistName == "")
     </div>
     <div>
         <a href="/Events" class="btn btn-success">All Events</a>
-        <a href="/Events/AttendingEvents" class="btn btn-primary">Events I'm Attending</a>
+        <a href="/Events/Attending" class="btn btn-primary">Events I'm Attending</a>
     </div>
 
 }
