--- a/src/EventManager/Views/Events/Index.cshtml
+++ b/src/EventManager/Views/Events/Index.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "All Events";
 }
 
+@inject UserManager<ApplicationUser> UserManager
+
 <h2>All Events</h2>
 <hr />
 <!-- For all users-->
@@ -36,9 +38,18 @@
             <td>@item.Date.ToString("MMMM d, yyyy")</td>
             <td>@item.Time.ToString("h:mm tt")</td>
             <td>@Html.DisplayFor(modelItem => item.Location)</td>
-            <td>
-                <a asp-action="Attend" asp-route-id="@item.EventID" class="btn btn-info">Attend</a>
-            </td>
+            @*@if(_context.User){ 
+                <td>
+                    <a asp-action="Cancel" asp-route-id="@item.EventID" class="btn btn-danger">Cancel</a>
+                </td>
+            }
+            else
+            {*@
+                <td>
+                    <a asp-action="Attend" asp-route-id="@item.EventID" class="btn btn-info">Attend</a>
+                    <a asp-action="Follow" asp-route-id="@item.EventID" class="btn btn-warning">Follow this Artist</a>
+                </td>
+            @*}*@
         </tr>
     }
 </table>
